--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": "^8",
         "magento/framework": ">=103",
         "magento/theme-frontend-blank": ">=100",
-        "ew/magento2-theme-one": "dev-master"
+        "ew/magento2-theme-one": ">=1"
     },
     "type": "magento2-theme",
     "version": "1.0.0",
